--- a/docker-compose/prod.yml
+++ b/docker-compose/prod.yml
@@ -1,27 +1,27 @@
 services:
-  # Frontend - Next.js App
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-    depends_on:
-      - go-api
-      - ai-server
-    networks:
-      - app-network
-    restart: unless-stopped
+  # # Frontend - Next.js App
+  # frontend:
+  #   build:
+  #     context: ../frontend
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - NODE_ENV=production
+  #     - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+  #     - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+  #   depends_on:
+  #     - go-api
+  #     - ai-server
+  #   networks:
+  #     - app-network
+  #   restart: unless-stopped
 
-  # Go API Server
+  # Go API Server (本番用)
   go-api:
     build:
-      context: ./backend-go
-      dockerfile: docker/Dockerfile
+      context: ../backend-go
+      dockerfile: docker/Dockerfile.prod
     ports:
       - "8080:8080"
     environment:
@@ -41,32 +41,32 @@ services:
     restart: unless-stopped
 
   # Python AI Server
-  ai-server:
-    build:
-      context: ./backend-python/ai_server
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    environment:
-      - ENVIRONMENT=production
-      - API_HOST=0.0.0.0
-      - API_PORT=8000
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
-      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ENCRYPTION_KEY=${ENCRYPTION_KEY}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - REDIS_URL=redis://redis:6379
-      - LOG_LEVEL=INFO
-    depends_on:
-      redis:
-        condition: service_healthy
-    volumes:
-      - ./backend-python/ai_server/logs:/app/logs
-    networks:
-      - app-network
-    restart: unless-stopped
+  # ai-server:
+  #   build:
+  #     context: ../backend-python/ai_server
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8000:8000"
+  #   environment:
+  #     - ENVIRONMENT=production
+  #     - API_HOST=0.0.0.0
+  #     - API_PORT=8000
+  #     - SUPABASE_URL=${SUPABASE_URL}
+  #     - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+  #     - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - ENCRYPTION_KEY=${ENCRYPTION_KEY}
+  #     - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+  #     - REDIS_URL=redis://redis:6379
+  #     - LOG_LEVEL=INFO
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ../backend-python/ai_server/logs:/app/logs
+  #   networks:
+  #     - app-network
+  #   restart: unless-stopped
 
   # PostgreSQL Database
   postgres:
@@ -79,7 +79,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend-go/docker/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../backend-go/docker/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - app-network
     healthcheck:
@@ -113,7 +113,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - frontend
