docs: 名前の変更とインデントの整理

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,12 +7,12 @@ http {
         server frontend:3000;
     }
 
-    upstream go-api {
-        server go-api:8080;
+    upstream go-backend {
+        server go-backend:8080;
     }
 
-    upstream ai-server {
-        server ai-server:8000;
+    upstream python-backend {
+        server python-backend:8000;
     }
 
     # Rate limiting
@@ -41,7 +41,7 @@ http {
         # Go API
         location /api/v1/ {
             limit_req zone=api burst=20 nodelay;
-            proxy_pass http://go-api;
+            proxy_pass http://go-backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,7 +51,7 @@ http {
         # AI Server
         location /ai/ {
             limit_req zone=ai burst=10 nodelay;
-            proxy_pass http://ai-server;
+            proxy_pass http://python-backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
