--- a/docker-compose/dev.yml
+++ b/docker-compose/dev.yml
@@ -17,14 +17,14 @@ services:
       - /app/node_modules
       - /app/.next
     depends_on:
-      - go-api
-      - ai-server
+      - go-backend
+      - python-backend
     networks:
       - app-network
     restart: unless-stopped
 
   # Go API Server (開発用 - ホットリロード)
-  go-api:
+  go-backend:
     build:
       context: ../backend-go
       dockerfile: docker/Dockerfile.dev
@@ -49,7 +49,7 @@ services:
     restart: unless-stopped
 
   # Python AI Server
-  ai-server:
+  python-backend:
     build:
       context: ../backend-python/ai_server
       dockerfile: Dockerfile
@@ -122,8 +122,8 @@ services:
       - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - frontend
-      - go-api
-      - ai-server
+      - go-backend
+      - python-backend
     networks:
       - app-network
     restart: unless-stopped
