fix: Python APIのポート修正とFastAPI Swagger UIを表示に追加

--- a/backend-python/requirements.txt
+++ b/backend-python/requirements.txt
@@ -3,10 +3,10 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 langchain==0.2.0
-langchain-openai==0.1.0
-langchain-anthropic==0.1.0
+langchain-openai==0.1.23
+langchain-anthropic==0.1.23
 langchain-google-genai==1.0.10
-langsmith==0.1.0
+langsmith>=0.1.17,<0.2.0
 httpx==0.26.0
 python-dotenv==1.0.0
 pytz
