--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,8 +7,8 @@ http {
         server frontend:3000;
     }
 
-    upstream go-backend {
-        server go-backend:8080;
+    upstream backend-go {
+        server backend-go:8080;
     }
 
     upstream python-backend {
@@ -41,7 +41,7 @@ http {
         # Go API
         location /api/v1/ {
             limit_req zone=api burst=20 nodelay;
-            proxy_pass http://go-backend;
+            proxy_pass http://backend-go;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
