refactor: nginx/prod.yml/docsでもサービス名をbackend-pythonに統一

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -11,8 +11,8 @@ http {
         server backend-go:8080;
     }
 
-    upstream python-backend {
-        server python-backend:8000;
+    upstream backend-python {
+        server backend-python:8000;
     }
 
     # Rate limiting
@@ -51,7 +51,7 @@ http {
         # AI Server
         location /ai/ {
             limit_req zone=ai burst=10 nodelay;
-            proxy_pass http://python-backend;
+            proxy_pass http://backend-python;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
