--- a/docker-compose/prod.yml
+++ b/docker-compose/prod.yml
@@ -49,14 +49,14 @@ services:
   # Python AI Server
   backend-python:
     build:
-      context: ../backend-python/ai_server
+      context: ../backend-python
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "8001:8001"
     env_file:
-      - ../backend-python/ai_server/.env.production.local  # 本番個人設定（優先）
-      - ../backend-python/ai_server/.env.local              # 個人設定
-      - ../backend-python/ai_server/.env                    # デフォルト設定
+      - ../backend-python/.env.production.local  # 本番個人設定（優先）
+      - ../backend-python/.env.local              # 個人設定
+      - ../backend-python/.env                    # デフォルト設定
     environment:
       # 本番環境固有の設定とDocker特有の設定を上書き
       - ENVIRONMENT=production
@@ -69,7 +69,7 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - ../backend-python/ai_server/logs:/app/logs
+      - ../backend-python/logs:/app/logs
     networks:
       - app-network
     restart: unless-stopped
@@ -111,25 +111,6 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
-
-  # Nginx Reverse Proxy (Optional - for production)
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - frontend
-      - backend-go
-      - backend-python
-    networks:
-      - app-network
-    restart: unless-stopped
-    profiles:
-      - production
 
 volumes:
   postgres_data:
