--- a/backend-go/.air.toml
+++ b/backend-go/.air.toml
@@ -1,11 +1,11 @@
 root = "."
 testdata_dir = "testdata"
-tmp_dir = "tmp"
+tmp_dir = "/tmp/air"
 
 [build]
 args_bin = []
-bin = "./tmp/main"
-cmd = "go run github.com/swaggo/swag/cmd/swag@v1.8.12 init -g cmd/api/main.go -o docs --pd && go build -o ./tmp/main ./cmd/api/main.go"
+bin = "/tmp/air/main"
+cmd = "go run github.com/swaggo/swag/cmd/swag@v1.8.12 init -g cmd/api/main.go -o docs --pd && go build -o /tmp/air/main ./cmd/api/main.go"
 delay = 1000
 exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs"]
 exclude_file = []
