--- a/backend-python/.env.local.example
+++ b/backend-python/.env.local.example
@@ -1,6 +1,6 @@
 # API設定
 API_V1_PREFIX=/api
-PROJECT_NAME=BridgeSpeak AI Server
+PROJECT_NAME=NeuraKnot AI Server
 VERSION=1.0.0
 HOST=0.0.0.0
 PORT=8001
@@ -16,7 +16,7 @@ GOOGLE_API_KEY=...
 # LangSmith設定（オプション）
 LANGSMITH_TRACING_V2=false
 LANGSMITH_API_KEY=ls__...
-LANGSMITH_PROJECT=bridgespeak
+LANGSMITH_PROJECT=neuraKnot
 LANGSMITH_ENDPOINT=https://smith.langchain.com
 
 # タイムアウト設定（秒）
