feat: フロントエンド認証機能の改善
- ログインページのUI/UXを改善
- サインアップページの機能を強化
- パスワードリセット機能を改善
- 認証コールバック処理を最適化
- 認証検証ページの改善
- 環境変数設定例を更新

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,5 +1,5 @@
 # ===========================================
-# BridgeSpeak フロントエンド環境変数
+# NeuraKnot フロントエンド環境変数
 # ===========================================
 # 注意: 実際の設定はルートディレクトリの .env.local ファイルを使用してください
 # このファイルは参考用です
