style: Docker Composeコメントを統一
- サービス名のコメントを統一（Go API Server → Backend Go、Python AI Server → Backend Python）
- 一貫性のある命名規則に統一

--- a/docker-compose/dev.yml
+++ b/docker-compose/dev.yml
@@ -23,7 +23,7 @@ services:
       - app-network
     restart: unless-stopped
 
-  # Go API Server (開発用 - ホットリロード)
+  # Backend Go (開発用 - ホットリロード)
   backend-go:
     build:
       context: ../backend-go
@@ -49,7 +49,7 @@ services:
       - app-network
     restart: unless-stopped
 
-  # Python AI Server (開発用 - ホットリロード)
+  # Backend Python (開発用 - ホットリロード)
   backend-python:
     build:
       context: ../backend-python
