fix(frontend): Vercelビルドエラー修正と環境変数の整理
- Next.js 15のuseSearchParams()をSuspenseで囲む対応
  - auth/verify/page.tsxをSuspense対応
  - dashboard/services/my-services/page.tsxから不要なuseSearchParams削除
- 不要なCognito関連環境変数を削除
  - NEXT_PUBLIC_AWS_REGION
  - NEXT_PUBLIC_COGNITO_USER_POOL_ID
  - NEXT_PUBLIC_COGNITO_CLIENT_ID
  - NEXT_PUBLIC_COGNITO_DOMAIN
- 環境変数を必要最小限に整理
  - NEXT_PUBLIC_API_BASE_URL: クライアント側API呼び出し用
  - BACKEND_GO_URL: サーバーサイド内部通信用
  - NEXT_PUBLIC_DEV_DELAY_MS: 開発用遅延制御

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,12 +4,11 @@
 # 注意: 実際の設定はルートディレクトリの .env.local ファイルを使用してください
 # このファイルは参考用です
 
-# AWS Cognito設定
-NEXT_PUBLIC_AWS_REGION=ap-northeast-1
-NEXT_PUBLIC_COGNITO_USER_POOL_ID=your_cognito_user_pool_id
-NEXT_PUBLIC_COGNITO_CLIENT_ID=your_cognito_client_id
-NEXT_PUBLIC_COGNITO_DOMAIN=your_cognito_domain
-NEXT_PUBLIC_COGNITO_REDIRECT_URI=http://localhost:3000/auth/callback
+# API Base URL
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8080/api/v1
 
-# API設定
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8080/api
+# Backend Go URL (Docker内部からのアクセス用)
+BACKEND_GO_URL=http://backend-go:8080
+
+# 開発用遅延制御
+NEXT_PUBLIC_DEV_DELAY_MS=3000  # 3秒遅延
