--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [main]
     paths:
-      - 'terraform/**'
+      - "terraform/**"
 
 permissions:
   contents: read
@@ -18,25 +18,25 @@ jobs:
         working-directory: terraform/environments/prod
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
-      
+
       - name: Terraform Format Check
         id: fmt
         run: terraform fmt -check -recursive
         continue-on-error: true
-      
+
       - name: Terraform Init
         id: init
         run: terraform init -backend=false
-      
+
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-      
+
       - name: Terraform Plan
         id: plan
         run: |
@@ -50,7 +50,7 @@ jobs:
             -var="langsmith_api_key=dummy" \
             -out=tfplan
         continue-on-error: true
-      
+
       - name: Comment PR
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
@@ -82,9 +82,7 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
-      
+
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
-
-
