--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ on:
   #     - 'backend-python/**'
   #     - '.github/workflows/deploy.yml'
 
+# OIDC認証に必要な権限を明示的に指定
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   # 変更検出
   detect-changes:
@@ -35,18 +40,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -62,7 +66,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-      
+
       - name: Update ECS Service
         run: |
           aws ecs update-service \
@@ -70,14 +74,14 @@ jobs:
             --service ${{ secrets.ECS_SERVICE_NAME_GO }} \
             --force-new-deployment \
             --region ${{ secrets.AWS_REGION }}
-      
+
       - name: Wait for service stability
         run: |
           aws ecs wait services-stable \
             --cluster ${{ secrets.ECS_CLUSTER_NAME }} \
             --services ${{ secrets.ECS_SERVICE_NAME_GO }} \
             --region ${{ secrets.AWS_REGION }}
-      
+
       - name: Deployment Success Notification
         if: success()
         run: |
@@ -91,18 +95,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -118,7 +121,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-      
+
       - name: Update ECS Service
         run: |
           aws ecs update-service \
@@ -126,14 +129,14 @@ jobs:
             --service ${{ secrets.ECS_SERVICE_NAME_PYTHON }} \
             --force-new-deployment \
             --region ${{ secrets.AWS_REGION }}
-      
+
       - name: Wait for service stability
         run: |
           aws ecs wait services-stable \
             --cluster ${{ secrets.ECS_CLUSTER_NAME }} \
             --services ${{ secrets.ECS_SERVICE_NAME_PYTHON }} \
             --region ${{ secrets.AWS_REGION }}
-      
+
       - name: Deployment Success Notification
         if: success()
         run: |
@@ -155,4 +158,3 @@ jobs:
             echo "⚠️ No services were deployed or deployment failed"
             exit 1
           fi
-
