fix(backend-python): modelsディレクトリをGitに追加
- .gitignoreがmodels/を除外していたため、app/models/がGitに追跡されていなかった
- .gitignoreを修正してML modelsは除外するがアプリケーションコードのmodelsは含めるように変更
- backend-python/app/models/の全ファイルを追加
- これによりDockerイメージにmodelsディレクトリが含まれ、ModuleNotFoundErrorが解消される

--- a/.gitignore
+++ b/.gitignore
@@ -205,10 +205,14 @@ docker-compose.override.yml
 *.sqlite3
 
 # AI/ML
-models/
+# ML model files (but not application code)
 *.model
 *.pkl
 *.joblib
+# Ignore ML models directory but not application models directory
+/**/models/
+!backend-python/app/models/
+!frontend/*/models/
 
 # AWS Cognito
 .aws/
