feat(ci): 自動デプロイを有効化してバージョンを戻す
- GitHub Actionsの自動デプロイを有効化（mainブランチへのpush時）
- backend-go/、backend-python/、deploy.ymlの変更時にトリガー
- backend-pythonのバージョンを1.0.0に戻す（modelsディレクトリ追加で問題解決済み）
- 手動実行（workflow_dispatch）も引き続き可能

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,13 @@
 name: Deploy to Production
 
 on:
-  # 手動実行のみ（GitHub Secrets設定後に自動化を有効化）
+  push:
+    branches: [main]
+    paths:
+      - "backend-go/**"
+      - "backend-python/**"
+      - ".github/workflows/deploy.yml"
   workflow_dispatch:
-  # push:
-  #   branches: [main]
-  #   paths:
-  #     - 'backend-go/**'
-  #     - 'backend-python/**'
-  #     - '.github/workflows/deploy.yml'
 
 # OIDC認証に必要な権限を明示的に指定
 permissions:
