--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,10 +1,8 @@
 name: Terraform Plan
 
+# Manual execution only
+# Auto-trigger disabled due to sensitive value issues in CI
 on:
-  pull_request:
-    branches: [main]
-    paths:
-      - "terraform/**"
   workflow_dispatch:
 
 permissions:
