fix: Deployワークフロー改善とUI改善
1. Deployスキップ時も成功扱いに変更
   - 変更がない場合のデプロイスキップを失敗ではなく成功として扱う
   - failureの場合のみエラー終了

2. エージェント設定保存時のローディングUI削除
   - モーダル上部のローディングスピナーを削除
   - レイアウト崩れを解消
   - ChevronUp/ChevronDown/Loader2のインポートを追加

3. エージェント作成ボタンをクリックのみに変更
   - Enterキーで反応しないように変更
   - type="button"に変更してonClickで明示的に送信

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -258,10 +258,15 @@ jobs:
     steps:
       - name: Check deployment status
         run: |
-          if [ "${{ needs.deploy-backend-go.result }}" = "success" ] || \
-             [ "${{ needs.deploy-backend-python.result }}" = "success" ]; then
+          GO_RESULT="${{ needs.deploy-backend-go.result }}"
+          PYTHON_RESULT="${{ needs.deploy-backend-python.result }}"
+
+          if [ "$GO_RESULT" = "success" ] || [ "$PYTHON_RESULT" = "success" ]; then
             echo "🚀 Deployment completed successfully!"
-          else
-            echo "⚠️ No services were deployed or deployment failed"
+          elif [ "$GO_RESULT" = "failure" ] || [ "$PYTHON_RESULT" = "failure" ]; then
+            echo "❌ Deployment failed"
             exit 1
+          else
+            echo "ℹ️ No services were deployed (no changes detected)"
+            echo "✓ Workflow completed successfully"
           fi
